--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Olimpíadas</title>
+  <title>Cyber Segurança</title>
 </head>
 
 <body>
   <header>
-      <h1>Atletas do Brasil</h1>
+      <h1>Golpes financeiros mais aplicados no Brasil</h1>
   </header>
   <main>
       <section>
