--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </header>
   <main>
       <section>
+          <h2>Mais de 5 milhões de golpes financeiros foram detectados até julho de 2022, o que representa mais de mil ataques por hora. Confira os cinco golpes financeiros mais aplicados no Brasil.</h2>
           <input type="text" placeholder="O que você deseja buscar na nossa Base de Dados?" id="campo-pesquisa">
           <button onclick="pesquisar()">Pesquisar</button>
       </section>
